force-app/main/default/objects/NotificationMessageContent__mdt/NotificationMessageContent__mdt.object-meta.xml
<CustomObject>
    <label>Notification Message Content</label>
    <pluralLabel>Notification Message Contents</pluralLabel>
</CustomObject>