force-app/main/default/objects/NotificationMessageContent__mdt/fields/NotificationMessage__c.field-meta.xml
<CustomField>
    <fullName>NotificationMessage__c</fullName>
    <label>Notification Message</label>
    <referenceTo>NotificationMessage__mdt</referenceTo>
    <relationshipLabel>Notification Message Contents</relationshipLabel>
    <relationshipName>NotificationMessageContents</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>