force-app/main/default/objects/NotificationMessageContent__mdt/fields/TextContent__c.field-meta.xml
<CustomField>
    <fullName>TextContent__c</fullName>
    <label>Text Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>