force-app/main/default/objects/NotificationMessageContent__mdt/fields/TextType__c.field-meta.xml
<CustomField>
    <fullName>TextType__c</fullName>
    <label>Text Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>